work from frontend

--- a/scoutsOfDniproSite/ClientApp/src/app/app.component.html
+++ b/scoutsOfDniproSite/ClientApp/src/app/app.component.html
@@ -1,8 +1,5 @@
 <body>
   <app-nav-menu></app-nav-menu>
-  <div class="_container">
-    <div class="container">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+  <router-outlet></router-outlet>
+  <app-footer class="footer"></app-footer>
 </body>
