--- a/scoutsOfDniproSite/ClientApp/src/app/components/auth/auth.component.html
+++ b/scoutsOfDniproSite/ClientApp/src/app/components/auth/auth.component.html
@@ -1,5 +1,33 @@
-<h2>{{errorText}}</h2>
+<!-- <h2>{{errorText}}</h2>
 <input type="text" placeholder="Email" #email>
 <input type="password" placeholder="Password" #password>
 <button (click)="login(email.value, password.value)">Auth</button>
-<a [routerLink]="['/register']">Нет аккаунта? - Зарегестрироватся.</a>
+<a [routerLink]="['/register']">Нет аккаунта? - Зарегестрироватся.</a> -->
+<div class="auth">
+    <div class="container">
+        <div class="container-inner">
+            <div class="container-inner-inner">
+                <div class="container-inner-inner-inner">
+                    <div class="auth-h1">
+                        <h1>Авторизация</h1>
+                    </div>
+                    <div class="inputs">
+                        <div class="inputs-input">
+                            <p>Введите E-Mail</p>
+                            <input type="text" placeholder="Введите E-Mail" #email>
+                        </div>
+                        <div class="inputs-input">
+                            <p>Введите Пароль</p>
+                            <input type="text" placeholder="Введите пароль" #password>    
+                        </div>
+                        <input type="submit" value="Авторизатся">
+                    </div>
+                    <div class="register">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <img src="../../../assets/img/auth-background.jpg" alt="">
+</div>
