--- a/scoutsOfDniproSite/ClientApp/src/app/components/auth/auth.component.html
+++ b/scoutsOfDniproSite/ClientApp/src/app/components/auth/auth.component.html
@@ -9,21 +9,23 @@
             <div class="container-inner-inner">
                 <div class="container-inner-inner-inner">
                     <div class="auth-h1">
-                        <h1>Авторизация</h1>
+                        <div class="auth-h1-h1">
+                            <h1>Авторизация</h1>
+                        </div>
                     </div>
                     <div class="inputs">
                         <div class="inputs-input">
-                            <p>Введите E-Mail</p>
+                            <p>Введите E-Mail:</p>
                             <input type="text" placeholder="Введите E-Mail" #email>
                         </div>
                         <div class="inputs-input">
-                            <p>Введите Пароль</p>
-                            <input type="text" placeholder="Введите пароль" #password>    
+                            <p>Введите Пароль:</p>
+                            <input type="password" placeholder="Введите пароль" #password>    
                         </div>
-                        <input type="submit" value="Авторизатся">
-                    </div>
-                    <div class="register">
-
+                        <div class="container-a"><div class="container-inner-a"><a (click)="login(email.value, password.value)">Авторизоватся</a></div></div>
+                        <div class="register">
+                            <a [routerLink]="['/register']">Нет аккаунта? - Зарегестрироватся.</a>
+                        </div>
                     </div>
                 </div>
             </div>
