--- a/scoutsOfDniproSite/ClientApp/src/app/components/auth/auth.component.html
+++ b/scoutsOfDniproSite/ClientApp/src/app/components/auth/auth.component.html
@@ -31,5 +31,5 @@
             </div>
         </div>
     </div>
-    <img src="../../../assets/img/auth-background.jpg" alt="">
+    <img src="../../../assets/img/auth-background.png" alt="">
 </div>
