--- a/scoutsOfDniproSite/ClientApp/src/app/components/your-acc/your-acc.component.html
+++ b/scoutsOfDniproSite/ClientApp/src/app/components/your-acc/your-acc.component.html
@@ -10,7 +10,7 @@
         <img src="../../../assets/img/your-acc-header.png" alt="">
     </div>
     <nav>
-        <app-your-acc-nav class="nav"></app-your-acc-nav>
+        <app-your-acc-nav [activeComp]='6' class="nav"></app-your-acc-nav>
     </nav>
     <div class="block">
         <div class="block-inner">
