доверстал страницу о нас.

--- a/scoutsOfDniproSite/ClientApp/src/app/components/footer/footer.component.html
+++ b/scoutsOfDniproSite/ClientApp/src/app/components/footer/footer.component.html
@@ -23,7 +23,7 @@
             <div class="input-data"><input type="text" placeholder="Телефон" #phone></div>
             <div class="input-data"><input type="text" placeholder="Эл. почта" #email></div>
             <div class="input-data input-data-write-text"><textarea type="text" placeholder="Добавьте сообщение..." #writetext></textarea></div>
-            <div class="container-a"><div class="container-inner-a"><a>Подробнее</a></div></div>
+            <div class="container-a"><div class="container-inner-a"><a>Отправить</a></div></div>
         </div>
     </div>
 </footer>
