sverstal user-requests, add post, edit post

--- a/scoutsOfDniproSite/ClientApp/src/app/components/main/main.component.html
+++ b/scoutsOfDniproSite/ClientApp/src/app/components/main/main.component.html
@@ -3,7 +3,7 @@
         <div class="text-inner">
             <h2>делаем мир лучше</h2>
             <h1>СКАУТЫ ДНЕПРА</h1>
-            <div class="container-a"><div class="container-inner-a"><a>Подробнее</a></div></div>
+            <div class="container-a"><div class="container-inner-a"><a [routerLink]="['/about']">Подробнее</a></div></div>
         </div>
     </div>
     <img src="../../../assets/img/main-page-block1-photo.png" alt="">
@@ -13,7 +13,7 @@
         <div class="text">
             <h1 class="scout-of-dnipro-h1">СКАУТЫ<br/>ДНЕПРА</h1>
             <p>Наша организация появилась в 1992 году благодаря силам Виктора Гогулинского, Юрия Галицкого и Надежды Мельничук. Будучи на старте маленькой туристическим кружком, мы разрослись до одного из самых больших скаутских объединений Украины. Сейчас, пройдя столь долгий путь развития, мы формируем новое поколение скаутов :  осознанной молодёжи, туристов и людей, курс которых — улучшение себя и своего окружения.</p>
-            <div class="container-a"><div class="container-inner-a"><a>Подробнее</a></div></div>
+            <div class="container-a"><div class="container-inner-a"><a [routerLink]="['/about']">Подробнее</a></div></div>
         </div>
     </div>
     <div class="history-inner">
@@ -30,7 +30,7 @@
                         <img src="../../../assets/img/каб.jpg" alt="">
                         <h2>КАБ СКАУТ</h2>
                         <p>6-11 лет</p>
-                        <div class="container-a"><div class="container-inner-a"><a>Подробнее</a></div></div>
+                        <div class="container-a"><div class="container-inner-a"><a [routerLink]="['/about']">Подробнее</a></div></div>
                     </div>
                 </div>
                 <div class="scout">
@@ -38,7 +38,7 @@
                         <img src="../../../assets/img/скаут.jpg" alt="">
                         <h2>СКАУТ</h2>
                         <p>11-18 лет</p>
-                        <div class="container-a"><div class="container-inner-a"><a>Подробнее</a></div></div>
+                        <div class="container-a"><div class="container-inner-a"><a [routerLink]="['/about']">Подробнее</a></div></div>
                     </div>
                 </div>
                 <div class="scout">
@@ -46,7 +46,7 @@
                         <img src="../../../assets/img/ровер.png" alt="">
                         <h2>РОВЕР</h2>
                         <p>18-25 лет</p>
-                        <div class="container-a"><div class="container-inner-a"><a>Подробнее</a></div></div>
+                        <div class="container-a"><div class="container-inner-a"><a [routerLink]="['/about']">Подробнее</a></div></div>
                     </div>
                 </div>
             </div>
