landing of admin panel. End

--- a/scoutsOfDniproSite/ClientApp/src/app/components/admin/admin-users-requests/admin-users-requests.component.html
+++ b/scoutsOfDniproSite/ClientApp/src/app/components/admin/admin-users-requests/admin-users-requests.component.html
@@ -25,7 +25,7 @@
     </div>
   </div>
 </div>
-<div *ngIf="isLoggedIn == false || isAdmin == false">
+<div *ngIf="isLoggedIn == false || canAcceptUsers == false">
   <h1>Тебе сюда нельзя.</h1>
 </div>
 
