--- a/scoutsOfDniproSite/ClientApp/src/app/components/now-events/now-events.component.html
+++ b/scoutsOfDniproSite/ClientApp/src/app/components/now-events/now-events.component.html
@@ -15,15 +15,15 @@
     <div class="block-inner">
         <div *ngFor="let event of events;" class="event">
             <div class="event-block">
-                <div class="event-block-20">
+                <div class="event-block-20 event-block-20-date">
                     <p>{{event.date}}</p>
                 </div>
                 <div class="event-block-80">
-                    
+
                 </div>
             </div>
             <div class="event-block">
-                <div class="event-block-20">
+                <div class="event-block-20 event-block-20-non-date">
 
                 </div>
                 <div class="event-block-80">
